@@ -98,7 +98,7 @@ public class AbstractSearchAsyncActionTests extends ESTestCase {
             new MockBigArrays(PageCacheRecycler.NON_RECYCLING_INSTANCE, ByteSizeValue.ofBytes(Long.MAX_VALUE)),
             nodeIdToConnection,
             Collections.singletonMap("foo", AliasFilter.of(new MatchAllQueryBuilder())),
-            Collections.singletonMap("foo", 2.0f),
+            new IndexBoosts(Map.of("foo", 2.0f)),
             null,
             request,
             listener,
